--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,26 +3,30 @@
 
 <div class="row">
     <div class="col-6 ">
-        <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <% campground.images.forEach((img, i) => {%>
-                <div class="carousel-item <%= i == 0 ? 'active' : '' %> ">
-                    <img src="<%= img.url %> " class="d-block w-100" alt="">
+        <div class="card mb-3">
+            <div class="card-body">
+                <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <% campground.images.forEach((img, i) => {%>
+                        <div class="carousel-item <%= i == 0 ? 'active' : '' %> ">
+                            <img src="<%= img.url %> " style="width: 100%; height: 300px;" class="d-block w-100" alt="">
+                        </div>
+                        <% }) %>
+                    </div>
+                    <% if(campground.images.length > 1) {%>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                    <% } %>
                 </div>
-                <% }) %>
             </div>
-            <% if(campground.images.length > 1) {%>
-            <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-            <% } %>
         </div>
         <div class="card mb-3">
             <div class="card-body">
@@ -32,7 +36,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location %> </li>
                 <li class="list-group-item">Submitted By: <%= campground.author.username %> </li>
-                <li class="list-group-item">$<%= campground.price %>/night</li>
+                <li class="list-group-item">&#8377;<%= campground.price %>/night</li>
             </ul>
             <% if(currentUser && campground.author.equals(currentUser._id)){ %>
             <div class="card-body">
@@ -52,10 +56,6 @@
         <% if(currentUser){ %>
         <h2>Leave A Review</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
-            <!-- <div class="mb-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input type="range" name="review[rating]" class="form-range" min="1" max="5" id="rating">
-            </div> -->
             <div class="mb-3">
                 <fieldset class="starability-growRotate">
                     <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
