--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,7 +4,7 @@
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"><%= err.message %></h4>
             <% if (process.env.NODE_ENV !== "production") { %>
-            <p><%= err.stack %> </p>
+            <p><%= err %> </p>
             <% } %>
         </div>
     </div>
