--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,6 +24,7 @@
                     <% } else { %>
                     <a class="nav-link" href="/logout">Logout</a>
                     <% } %>
+                    <a class="nav-link" href="#">Others</a>
                 </nav>
             </div>
         </header>
